feat: rewrite storage logic, remove unnecessary code, begin implementing graceful shutdown
